# Eurobot-2026-Main

./: .gitignore  CLAUDE.md  README.md  docker-compose.yaml  main  note  test_launch.sh
.github/workflows/: ros2-build.yml
docker/: Dockerfile  docker-compose.yaml
docker/scripts/cli_tools/: install_gemini_cli.sh
docker/scripts/micro_ros/: bind_MCU.bat  build_micro_ros.sh  install_micro_ros.sh
docker/scripts/settings/: .bashrc
docker/scripts/vnc/: install_vnc.sh  start-vnc.sh
ref/: bot1_blue_a.xml  bottom.json  bt_launch.py  bt_m_tree_node_model.xml  map_points.yaml
src/Interface/opennav_docking_msgs/: CMakeLists.txt  package.xml
src/Interface/opennav_docking_msgs/action/: DockRobot.action
src/bt_core/: CMakeLists.txt  package.xml
src/bt_core/bt/: black_blue_0.xml  black_blue_1.xml  black_blue_2.xml  black_blue_3.xml  black_blue_4.xml  black_blue_5.xml  black_yellow_0.xml  black_yellow_1.xml  black_yellow_4.xml  main_tree.xml  tree_node_model.xml  white_blue_1.xml  white_blue_6.xml  white_yellow_0.xml  white_yellow_1.xml  white_yellow_2.xml  white_yellow_3.xml  white_yellow_4.xml  white_yellow_6.xml
src/bt_core/include/: CursorPublisher.hpp  FieldUpdater.hpp  FlipPublisher.hpp  FlipPublisher_white.hpp  MissionChecker.hpp  MissionPublisher.hpp  PutPublisher.hpp  TakePublisher.hpp  TakePublisher_white.hpp  TidyPublisher.hpp  bt_config.hpp  bt_engine.hpp  decision_core.hpp
src/bt_core/launch/: bt_engine_launch.py  robot_bringup.py
src/bt_core/params/: map_points.yaml  map_points_black.yaml  map_points_default.yaml  map_points_white.yaml  mission_sequence.json  mission_sequence_black.json  mission_sequence_white.json
src/bt_core/src/: CursorPublisher.cpp  FieldUpdater.cpp  FlipPublisher.cpp  FlipPublisher_white.cpp  MissionChecker.cpp  MissionPublisher.cpp  PutPublisher.cpp  TakePublisher.cpp  TakePublisher_white.cpp  TidyPublisher.cpp  bt_engine.cpp  decision_core.cpp
src/bt_core/test/: test_bt_engine_launch.py
src/main/: CMakeLists.txt  package.xml
src/main/include/: bt_config.hpp  bt_engine.hpp  decision_core.hpp
src/main/launch/: bt_launch.py
src/main/params/: map_points.yaml  mission_sequence.json
src/main/src/: bt_engine.cpp  decision_core.cpp
src/navigation/: CMakeLists.txt  package.xml
src/navigation/include/: controller_type_publisher.hpp  dock_action_node.hpp  dynamicDock.hpp  nav_action_node.hpp  navigation_util.hpp  onDock.hpp  relativeNav.hpp  rotate_action_node.hpp  stop_robot_node.hpp
src/navigation/params/: nav_params.yaml
src/navigation/src/: controller_type_publisher.cpp  dock_action_node.cpp  dynamicDock.cpp  nav_action_node.cpp  onDock.cpp  relativeNav.cpp  rotate_action_node.cpp  stop_robot_node.cpp
src/sensors/: CMakeLists.txt  package.xml
src/sensors/include/: CamReceiver.hpp  FirmwareReceiver.hpp  GameInfoReceiver.hpp  LocReceiver.hpp  receiver_util.hpp
src/sensors/src/: CamReceiver.cpp  FirmwareReceiver.cpp  GameInfoReceiver.cpp  LocReceiver.cpp
src/startup/: CMakeLists.txt  package.xml
src/startup/include/: startup.hpp
src/startup/launch/: robot_side_publisher_launch.py  startup_launch.py
src/startup/params/: robot_config_black.yaml  robot_config_default.yaml  robot_config_white.yaml
src/startup/scripts/: component_test.py  mock_groups_test.py
src/startup/src/: startup.cpp  startup_new.cpp  startup_old.cpp
src/startup/test/: test_startup_launch.py  test_startup_pipeline.py
src/utils/: CMakeLists.txt  package.xml
src/utils/include/: bt_config.hpp  utils.hpp
src/utils/src/: utils_placeholder.cpp
