<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>main</name>
  <version>0.0.1</version>
  <description>Behavior Tree Engine for Eurobot 2026</description>
  <maintainer email="justinshih@gapp.nthu.edu.tw">DIT-ROBOTICS</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>btcpp_ros2_interfaces</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>
  
  <!-- Sibling packages -->
  <depend>sensors</depend>
  <depend>navigation</depend>
  <depend>utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
